test/tests/stages/18_structures/invalid_types/extra_credit/bad_union_member_access/union_bad_pointer_member.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[4]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: malloc
        List[1]: 
          TIdentifier: size
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            ULong: 
          Pointer: 
            Void: 
        None: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: a
        Bool: 1
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: x
            Int: 
          CMemberDeclaration: 
            TIdentifier: y
            Int: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: b
        Bool: 1
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: m
            Int: 
          CMemberDeclaration: 
            TIdentifier: n
            Int: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: malloc
                      List[1]: 
                        CSizeOfT: 
                          Structure: 
                            TIdentifier: a
                            Bool: 1
                          None: 
                      None: 
                    None: 
                  Pointer: 
                    Structure: 
                      TIdentifier: a
                      Bool: 1
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CArrow: 
                    TIdentifier: m
                    CVar: 
                      TIdentifier: ptr
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 10
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
